--- a/mogo-apps-ios/create-goals/CreateGoals.storyboard
+++ b/mogo-apps-ios/create-goals/CreateGoals.storyboard
@@ -11,7 +11,7 @@
         <!--Create Goal-->
         <scene sceneID="Lam-Xw-1eN">
             <objects>
-                <viewController id="TN3-2I-tlw" customClass="CreateGoalController" customModule="fix_mogo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="TN3-2I-tlw" customClass="CreateGoalController" customModule="mogo_apps_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Nw7-Nj-Vc7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -438,6 +438,9 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="YEE-vD-jr3">
                             <color key="tintColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="buttonSave:" destination="TN3-2I-tlw" id="LDu-Nm-q7W"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
