--- a/mogo-apps-ios/create-goals/icon-collection/Icon.storyboard
+++ b/mogo-apps-ios/create-goals/icon-collection/Icon.storyboard
@@ -12,7 +12,7 @@
         <!--Add Icon-->
         <scene sceneID="AIa-qf-4Zi">
             <objects>
-                <viewController id="5ba-gQ-oav" customClass="IconController" customModule="fix_mogo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="iconVC" id="5ba-gQ-oav" customClass="IconController" customModule="mogo_apps_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="y5v-rS-t3g">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -57,6 +57,9 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="8Cu-pA-y0j">
                             <color key="tintColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="clickDone:" destination="5ba-gQ-oav" id="xHm-wo-Xyh"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
