--- a/mogo-apps-ios/create-goals/CreateGoals.storyboard
+++ b/mogo-apps-ios/create-goals/CreateGoals.storyboard
@@ -20,31 +20,23 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="170"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cool" translatesAutoresizingMaskIntoConstraints="NO" id="QuH-Bq-yH5">
-                                        <rect key="frame" x="167" y="10" width="80" height="80"/>
+                                        <rect key="frame" x="167" y="15" width="80" height="80"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="80" id="KGf-Fm-N0s"/>
-                                            <constraint firstAttribute="width" constant="80" id="gSF-6A-pQV"/>
+                                            <constraint firstAttribute="width" constant="80" id="Gyp-IP-aSw"/>
+                                            <constraint firstAttribute="height" constant="80" id="jOH-QF-zmz"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Weh-y8-WEY">
-                                        <rect key="frame" x="167" y="10" width="80" height="80"/>
+                                        <rect key="frame" x="167" y="15" width="80" height="80"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="80" id="95D-CW-N8e"/>
+                                            <constraint firstAttribute="width" constant="80" id="KAv-vx-eSO"/>
+                                            <constraint firstAttribute="height" constant="80" id="Kst-VZ-yJr"/>
                                         </constraints>
                                         <connections>
                                             <action selector="toIconCollection:" destination="TN3-2I-tlw" eventType="touchUpInside" id="4xD-Rm-kdP"/>
                                             <segue destination="1zd-jm-zKp" kind="presentation" id="G1U-tO-1zz"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Icon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRM-Y1-yMK">
-                                        <rect key="frame" x="170" y="100" width="74" height="16"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="74" id="1wq-Ir-Fon"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <color key="textColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GOAL INFORMATION" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3IO-0Q-G4M">
                                         <rect key="frame" x="16" y="154" width="127.5" height="16"/>
                                         <constraints>
@@ -54,20 +46,28 @@
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Edit Icon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRM-Y1-yMK">
+                                        <rect key="frame" x="0.0" y="105" width="414" height="16"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="16" id="yKy-1b-hCH"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <color key="textColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <constraints>
-                                    <constraint firstItem="Weh-y8-WEY" firstAttribute="top" secondItem="kpl-vB-gu4" secondAttribute="top" constant="10" id="0xm-t8-ekS"/>
-                                    <constraint firstAttribute="trailing" secondItem="Weh-y8-WEY" secondAttribute="trailing" constant="167" id="2c5-Am-IXj"/>
+                                    <constraint firstAttribute="trailing" secondItem="FRM-Y1-yMK" secondAttribute="trailing" id="1UA-Sv-xwc"/>
                                     <constraint firstAttribute="height" constant="170" id="4wA-vq-7VY"/>
                                     <constraint firstAttribute="bottom" secondItem="3IO-0Q-G4M" secondAttribute="bottom" id="89y-Fk-Fxj"/>
-                                    <constraint firstItem="FRM-Y1-yMK" firstAttribute="top" secondItem="QuH-Bq-yH5" secondAttribute="bottom" constant="10" id="F2e-e0-gsv"/>
-                                    <constraint firstItem="Weh-y8-WEY" firstAttribute="leading" secondItem="kpl-vB-gu4" secondAttribute="leading" constant="167" id="FEQ-hc-J4P"/>
-                                    <constraint firstItem="FRM-Y1-yMK" firstAttribute="leading" secondItem="kpl-vB-gu4" secondAttribute="leading" constant="170" id="L6o-nY-f4g"/>
-                                    <constraint firstItem="QuH-Bq-yH5" firstAttribute="top" secondItem="kpl-vB-gu4" secondAttribute="top" constant="10" id="Sdy-m2-Ace"/>
-                                    <constraint firstItem="QuH-Bq-yH5" firstAttribute="leading" secondItem="kpl-vB-gu4" secondAttribute="leading" constant="167" id="ava-y8-66z"/>
-                                    <constraint firstAttribute="trailing" secondItem="FRM-Y1-yMK" secondAttribute="trailing" constant="170" id="eRC-R3-e8a"/>
+                                    <constraint firstItem="Weh-y8-WEY" firstAttribute="top" secondItem="kpl-vB-gu4" secondAttribute="top" constant="15" id="HFK-nb-Qty"/>
+                                    <constraint firstItem="QuH-Bq-yH5" firstAttribute="top" secondItem="kpl-vB-gu4" secondAttribute="top" constant="15" id="h7G-kE-KKA"/>
+                                    <constraint firstItem="Weh-y8-WEY" firstAttribute="centerX" secondItem="kpl-vB-gu4" secondAttribute="centerX" id="mUD-ea-neN"/>
+                                    <constraint firstItem="QuH-Bq-yH5" firstAttribute="centerX" secondItem="kpl-vB-gu4" secondAttribute="centerX" id="nzX-7y-5D0"/>
                                     <constraint firstItem="3IO-0Q-G4M" firstAttribute="leading" secondItem="kpl-vB-gu4" secondAttribute="leading" constant="16" id="y2f-ft-niZ"/>
+                                    <constraint firstItem="FRM-Y1-yMK" firstAttribute="top" secondItem="QuH-Bq-yH5" secondAttribute="bottom" constant="10" id="ztp-Xh-lYe"/>
+                                    <constraint firstItem="FRM-Y1-yMK" firstAttribute="leading" secondItem="kpl-vB-gu4" secondAttribute="leading" id="zxP-ak-sVx"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l5P-O6-usV" userLabel="Goal Name">
@@ -127,7 +127,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fF1-EO-bTq">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fF1-EO-bTq">
                                         <rect key="frame" x="191" y="5" width="215" height="34"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -175,7 +175,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wgi-Xk-nMx">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wgi-Xk-nMx">
                                         <rect key="frame" x="191" y="5" width="215" height="34"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -224,7 +224,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tqS-gd-zVS">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tqS-gd-zVS">
                                         <rect key="frame" x="191" y="5" width="215" height="34"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -435,6 +435,9 @@
                     <navigationItem key="navigationItem" title="Create Goal" id="txT-cr-8AD">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="YEE-vD-jr3">
                             <color key="tintColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="saveData:" destination="TN3-2I-tlw" id="tCs-IN-h4w"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
