--- a/mogo-apps-ios/create-goals/icon-collection/Icon.storyboard
+++ b/mogo-apps-ios/create-goals/icon-collection/Icon.storyboard
@@ -12,7 +12,7 @@
         <!--Add Icon-->
         <scene sceneID="AIa-qf-4Zi">
             <objects>
-                <viewController id="5ba-gQ-oav" customClass="IconController" customModule="fix_mogo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="5ba-gQ-oav" customClass="IconController" customModule="mogo_apps_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="y5v-rS-t3g">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -54,9 +54,15 @@
                     <navigationItem key="navigationItem" title="Add Icon" id="jnT-cp-xML">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="F4P-a1-ieD">
                             <color key="tintColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="buttonCancel:" destination="5ba-gQ-oav" id="Z2v-fP-7oo"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="8Cu-pA-y0j">
                             <color key="tintColor" red="0.086274509799999996" green="0.47450980390000003" blue="0.43137254899999999" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <segue destination="A8f-eO-nq7" kind="unwind" unwindAction="unwindToFirstViewController:" id="GoQ-Kl-vpi"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -64,6 +70,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8gQ-6X-alI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="A8f-eO-nq7" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="914.49275362318849" y="152.00892857142856"/>
         </scene>
