--- a/mogo-apps-ios/goal-detail/GoalDetail.storyboard
+++ b/mogo-apps-ios/goal-detail/GoalDetail.storyboard
@@ -459,7 +459,7 @@
                         <barButtonItem key="rightBarButtonItem" title="Edit" id="F42-dz-P5e">
                             <color key="tintColor" red="0.086274509803921567" green="0.47450980392156861" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
-                                <action selector="editButton:" destination="tQt-9S-hGW" id="be8-R0-hS3"/>
+                                <action selector="editButton:" destination="tQt-9S-hGW" id="cxJ-H9-Nwd"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
