--- a/mogo-apps-ios/goal-detail/GoalDetail.storyboard
+++ b/mogo-apps-ios/goal-detail/GoalDetail.storyboard
@@ -456,6 +456,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Goal Detail" id="7WI-xF-mf5">
+                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="wHE-WU-rW1">
+                            <color key="tintColor" red="0.086274509803921567" green="0.47450980392156861" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Edit" id="F42-dz-P5e">
                             <color key="tintColor" red="0.086274509803921567" green="0.47450980392156861" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
                             <connections>
