--- a/mogo-apps-ios/goal-detail/GoalDetail.storyboard
+++ b/mogo-apps-ios/goal-detail/GoalDetail.storyboard
@@ -456,8 +456,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Goal Detail" id="7WI-xF-mf5">
-                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="wHE-WU-rW1">
+                        <barButtonItem key="leftBarButtonItem" title="&lt;" id="wHE-WU-rW1">
                             <color key="tintColor" red="0.086274509803921567" green="0.47450980392156861" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="backButton:" destination="tQt-9S-hGW" id="zhM-mb-h2W"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Edit" id="F42-dz-P5e">
                             <color key="tintColor" red="0.086274509803921567" green="0.47450980392156861" blue="0.43137254901960786" alpha="1" colorSpace="calibratedRGB"/>
@@ -496,7 +499,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cIq-vT-8BP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="102.89855072463769" y="176.78571428571428"/>
+            <point key="canvasLocation" x="165" y="177"/>
         </scene>
         <!--addWithdrawStoryboard-->
         <scene sceneID="0Ed-00-e0t">
